Tota11y contrast fix in navigation and add hover underline

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -220,3 +220,7 @@
 .edit-delete.col {
   max-width: fit-content;
 }
+
+.nav-link:hover {
+  text-decoration: underline;
+}
